chore: bump version, refactor, cleanups, build updates
- Bump mod version from v5.0.26-v8 to v5.0.27-v8
- Remove custom solim.core.Provider interface, replace all usages with arc.func.Prov
- Remove private default self() methods from CellConfig/ElementConfig, add overridden self() implementations to all implementing classes
- Update build.gradle to use proper Java toolchain config and set Java release version to 8
- Various minor code cleanups: replace var with explicit types, fix formatting, remove unused imports, adjust lambda syntax